# kleiber-gazebo-plugins

./: README.md
six-wheel-robot/: README.md  control.sh  launch_cardboard_box_world.sh
six-wheel-robot/models/base-model/: model.config  model.sdf
six-wheel-robot/plugins/drivetrain/: CMakeLists.txt  compile.sh  drive_example.cc  drivetrain.cc
six-wheel-robot/worlds/: basic-cardboard-box-world.sdf
